feat: refactoring css from app

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: whitesmoke;
+  background-color: rgb(196, 196, 196);
   box-sizing: border-box;
   font-size: 17px;
 }
@@ -17,12 +17,6 @@ body {
   font-size: 28px;
   font-weight: 500;
   text-align: center;
-}
-
-.movie-list {
-  display: flex;
-  flex-flow: row wrap;
-  padding: 48px 30px;
 }
 
 .movie-card {
